# pyadr

./: .gitignore  makefile  pyproject.toml
src/pyadr/: __main__.py
src/pyadr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pyadr/cli/: __init__.py  init.py  list_.py  new.py
src/pyadr/config/: __init__.py
src/pyadr/error_handling/: error_handler.py  exceptions.py
src/pyadr/project/: __init__.py  fileio.py  project.py
src/pyadr/templates/: new.md
